--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,7 +71,7 @@ dependencies:
   expansion_card: ^0.1.0
   flutter_password_strength: ^0.1.4
   flutter_inappwebview: ^4.0.0+4
-  background_fetch: ^0.7.1
+  # background_fetch: ^0.7.1
   # flutter_inapp_purchase: ^3.0.1
   google_nav_bar: ^4.0.2
   huge_listview:
